@@ -100,6 +100,11 @@ breport [OPTIONS]
 	<start contig>
 	<end contig>
 
+bsort [OPTIONS]
+	<bfast report file name>
+	<memory limit in MB>
+	<tmp directory>
+
 btestindexes [OPTIONS]
 ******************************* Algorithm Options (no defaults) *******************************
 	-a	INT	algorithm
